@@ -1,13 +1,13 @@
 [comment {-*- tcl -*- doctools manpage}]
 [manpage_begin grammar::fa::op n 0.4]
-[copyright {2004 Andreas Kupries <andreas_kupries@users.sourceforge.net>}]
+[copyright {2004-2008 Andreas Kupries <andreas_kupries@users.sourceforge.net>}]
 [moddesc   {Finite automaton operations and usage}]
 [titledesc {Operations on finite automatons}]
 [require Tcl 8.4]
 [require snit]
 [require struct::list]
 [require struct::set]
-[require grammar::fa::op [opt 0.4]]
+[require grammar::fa::op [opt 0.4.1]]
 [description]
 [keywords grammar automaton {finite automaton}]
 [keywords state {regular expression} {regular grammar}]
